--- a/assets/index.less
+++ b/assets/index.less
@@ -4,7 +4,7 @@
 @line-height: 1.5;
 @table-border-color: #e9e9e9;
 @table-head-background-color: rgba(0,160,233,0.2);
-@vertical-padding: 16px;
+@vertical-padding: 8px;
 @horizontal-padding: 8px;
 @border-width: 1px;
 @border-color: rgb(52,134,218);
@@ -159,7 +159,7 @@
     tr {
       td,
       th {
-        background: #fff;
+        // background: #fff;
       }
     }
   }
